--- a/src/css/pages/index.css
+++ b/src/css/pages/index.css
@@ -960,8 +960,8 @@ p {
   display: block;
 }
 #project .project-list li .mask > label {
-  margin-bottom: 30px;
   font-size: 18px;
+  margin-bottom: 30px;
   font-weight: bold;
 }
 #project .project-list li .mask .text {
@@ -1122,4 +1122,41 @@ p {
   display: block;
   -webkit-animation: flipInY 1s .2s ease both;
   -moz-animation: flipInY 1s .2s ease both;
+}
+@media screen and (max-width: 1440px) {
+  #project .project-list li .mask label {
+    font-size: 14px;
+    padding-top: 0;
+  }
+  #project .project-list li .mask > label {
+    margin-bottom: 30px;
+  }
+  #project .project-list li .mask .text {
+    width: 100%;
+  }
+  #project .project-list li .mask .text > label {
+    font-size: 14px;
+    padding: 0 0 10px 0;
+    height: auto;
+    overflow: hidden;
+  }
+  #project .project-list li .mask .text > p:first-of-type {
+    font-family: "STSongti-SC-Light", "宋体", "微软雅黑", sans-serif;
+    line-height: 1.6;
+    font-size: 12px;
+    height: 36px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+  }
+  #project .project-list li .mask .text > .link {
+    bottom: 15px;
+  }
+  #project .project-list li .mask .text > .link a {
+    -webkit-transform: scale(0.75);
+    transform: scale(0.75);
+    margin-right: 15px;
+  }
 }
