--- a/src/less/pages/aboutUs.less
+++ b/src/less/pages/aboutUs.less
@@ -38,6 +38,10 @@
       text-indent:2em;
       padding-bottom:15px;
     }
+    & ~ .list-text {
+      .fontSong;
+      line-height:2;
+    }
   }
   strong.tip {
     .f14;
