--- a/src/less/lib-public.less
+++ b/src/less/lib-public.less
@@ -321,8 +321,8 @@
     & > span {
       .fl;
       .pos-r;
-      padding:10px 0 10px 30px;
-      line-height:20px;
+      padding:15px 0 15px 30px;
+      line-height:30px;
       &:before {
         .before(4px, 4px);
         background-color:@red;
@@ -333,7 +333,7 @@
       }
       strong {
         .f12;
-        .block;
+        .hide;
         .fontSong;
         line-height:24px;
         font-weight:normal;
