--- a/src/less/pages/servicePro.less
+++ b/src/less/pages/servicePro.less
@@ -91,13 +91,16 @@
   background-size:contain;
   .box {
     width:45%;
-    padding:140px 0;
+    padding:90px 0;
     line-height:1.8;
     h3 {
       font-size:30px;
+      .mb(20px);
     }
     &>p{
-      .pr(50px);
+      .f14;
+      .pr(40px);
+      .mb(15px);
     }
   }
 }
