--- a/src/less/lib-reset.less
+++ b/src/less/lib-reset.less
@@ -27,7 +27,7 @@ article, aside, canvas, details, embed, figure, figcaption, footer, header, menu
   font-size:100%;
 }
 
-/* ------- HTML5 display-role reset for older browsers ------- */
+/* ------- HTML5 display-role pc for older browsers ------- */
 
 article, aside, details, figcaption, figure, footer, header, menu, nav, section {
   display:block;
