更改局部图片和文字样式
“案例侧边栏样式”
“傻鸟知服”中转页整体跳转

--- a/src/css/pages/cases.css
+++ b/src/css/pages/cases.css
@@ -584,11 +584,14 @@ p {
   margin-top: -200px;
   box-sizing: border-box;
   padding: 20px 0;
-  left: 0;
+  left: -38px;
   top: 50%;
   width: 80px;
   height: 475px;
   background-color: rgba(61, 61, 61, 0.95);
+}
+#menuBar:hover {
+  left: 0;
 }
 #menuBar li {
   font-size: 14px;
