--- a/src/less/pages/cases.less
+++ b/src/less/pages/cases.less
@@ -98,11 +98,14 @@
   .mt(-200px);
   box-sizing:border-box;
   padding:20px 0;
-  left:0;
+  left:-38px;
   top:50%;
   width:80px;
   height:475px;
   background-color:rgba(61, 61, 61, .95);
+  &:hover {
+    left:0;
+  }
   li {
     .f14;
     color:@white;
@@ -111,9 +114,9 @@
     text-indent:-4px;
     line-height:34px;
     cursor:pointer;
-    .border-top-base(rgba(255,255,255,.3));
-    &:last-of-type{
-      .border-bottom-base(rgba(255,255,255,.3));
+    .border-top-base(rgba(255, 255, 255, .3));
+    &:last-of-type {
+      .border-bottom-base(rgba(255, 255, 255, .3));
     }
     & > small {
       .hide;
