--- a/src/less/pages/foolishBird.less
+++ b/src/less/pages/foolishBird.less
@@ -4,7 +4,10 @@
   .pos-r;
   height:860px;
   background:url("@{bground}/fbBg.png") no-repeat rgba(248, 248, 248, 1) center top;
-
+  & > a:first-child {
+    .block;
+    color:#333;
+  }
   .box {
     //background:#6bc5eb;
     box-sizing:border-box;
@@ -42,7 +45,7 @@
           .mt(18px);
           .text-center;
           .font(40px, "Microsoft Yahei", 700);
-          & > a {
+          & > span {
             .pos-r;
             display:inline-block;
             color:rgba(254, 122, 26, 1);
