添加响应式样式hack
现在还差头部导航，
“联系我们”两块页面

--- a/src/css/lib-common.css
+++ b/src/css/lib-common.css
@@ -53,7 +53,7 @@ video {
   border: 0;
   font-size: 100%;
 }
-/* ------- HTML5 display-role pc for older browsers ------- */
+/* ------- HTML5 display-role mb for older browsers ------- */
 article,
 aside,
 details,
