--- a/src/less/lib-common.less
+++ b/src/less/lib-common.less
@@ -2,9 +2,13 @@
 //RESET
 body {
   .f16;
+
+  letter-spacing:0;
+  color:rgba(0, 0, 0, .8);
   font-family:"微软雅黑", sans-serif;
-  color:rgba(51, 51, 51, 1);
-  line-height:1.4;
+  font-weight:400;
+  font-style:normal;
+  line-height:1.6;
   text-rendering:optimizeLegibility;
   -webkit-font-smoothing:antialiased;
   -moz-osx-font-smoothing:grayscale;
