--- a/src/less/lib-reset.less
+++ b/src/less/lib-reset.less
@@ -27,7 +27,7 @@ article, aside, canvas, details, embed, figure, figcaption, footer, header, menu
   font-size:100%;
 }
 
-/* ------- HTML5 display-role pc for older browsers ------- */
+/* ------- HTML5 display-role mb for older browsers ------- */
 
 article, aside, details, figcaption, figure, footer, header, menu, nav, section {
   display:block;
@@ -169,20 +169,6 @@ blockquote:before, blockquote:after, q:before, q:after {
 table {
   border-spacing:0;
   border-collapse:collapse;
-}
-
-body {
-  letter-spacing:0;
-  color:rgba(0, 0, 0, .8);
-  font-family:"微软雅黑", sans-serif;
-  font-size:18px;
-  font-weight:400;
-  font-style:normal;
-  line-height:1.6;
-  text-rendering:optimizeLegibility;
-  -webkit-font-smoothing:antialiased;
-  -moz-osx-font-smoothing:grayscale;
-  -moz-font-feature-settings:"liga" on;
 }
 
 ::selection {
