--- a/src/less/pages/aboutUs.less
+++ b/src/less/pages/aboutUs.less
@@ -177,6 +177,11 @@
 
 .ourCulture-table {
   .wrapper(0, 130px);
+  &>img:only-of-type{
+    display:none;
+    padding:0 15px;
+    box-sizing:border-box;
+  }
   table {
     td {
       color:@white;
