--- a/src/css/pages/servicePro.css
+++ b/src/css/pages/servicePro.css
@@ -235,6 +235,9 @@ body {
 .icon-wechat:before {
   background: url("../img/icon-1.png") no-repeat -311px -204px;
 }
+.icon-cs:before {
+  background: url("../img/icon-1.png") no-repeat -288px -230px;
+}
 .icon-backtop:before {
   background: url("../img/icon-1.png") no-repeat -233px -230px;
 }
@@ -550,26 +553,52 @@ p {
   display: block;
   margin: 80px auto 100px auto;
 }
-.service-patent-type {
+.service-apply-type {
+  background-color: #f8f8f8;
+  height: auto;
+  overflow: hidden;
   width: 100%;
-  height: 550px;
-  margin-top: 100px;
-  background: url("../img/bground/servicePatentBg.png") no-repeat right center #f8f8f8;
-  background-size: contain;
+  display: table;
 }
-.service-patent-type .box {
-  width: 45%;
-  padding: 90px 0;
-  line-height: 1.8;
+.service-apply-type > .lt,
+.service-apply-type > .rt {
+  display: table-cell;
+  vertical-align: middle;
 }
-.service-patent-type .box h3 {
+.service-apply-type .lt-box {
+  position: relative;
+  width: 40%;
+  vertical-align: top;
+  display: table-cell;
+}
+.service-apply-type .lt-box .box {
+  width: 70%;
+  position: absolute;
+  right: -90px;
+  top: 70px;
+}
+.service-apply-type .lt-box .box > h3 {
   font-size: 30px;
   margin-bottom: 20px;
 }
-.service-patent-type .box > p {
+.service-apply-type .lt-box .box > p {
   font-size: 14px;
   padding-right: 40px;
   margin-bottom: 15px;
+}
+.service-apply-type .rt-box {
+  position: relative;
+  width: 60%;
+  vertical-align: top;
+  display: table-cell;
+}
+.service-apply-type .rt-box > img {
+  height: inherit;
+}
+.service-apply-type .rt-box > img.cover {
+  position: absolute;
+  left: 30%;
+  top: 40px;
 }
 .service-flow {
   padding: 80px 0 0 0;
@@ -685,34 +714,34 @@ p {
   overflow: visible;
   padding-top: 70px;
 }
-.service-value .box h3 {
+.service-value .box > h3 {
   margin-bottom: 20px;
 }
 .service-value .box > p {
   text-align: center;
 }
-.service-value .box ul {
+.service-value .box > ul {
   height: auto;
   overflow: hidden;
   margin-top: 70px;
   zoom: 1;
   overflow: visible;
 }
-.service-value .box ul dl,
-.service-value .box ul li {
+.service-value .box > ul dl,
+.service-value .box > ul li {
   float: left;
   margin-right: 30px;
 }
-.service-value .box ul:before {
+.service-value .box > ul:before {
   content: '';
   display: block;
 }
-.service-value .box ul:after {
+.service-value .box > ul:after {
   content: '';
   display: table;
   clear: both;
 }
-.service-value .box ul li {
+.service-value .box > ul li {
   width: 270px;
   height: 420px;
   padding: 30px 20px;
@@ -720,37 +749,37 @@ p {
   background-color: #ffffff;
   box-shadow: 0 0 10px rgba(36, 26, 26, 0.35);
 }
-.service-value .box ul li em {
+.service-value .box > ul li em {
   display: block;
   margin: 0 auto 20px auto;
   background-image: url("../img/icon-2.png");
   width: 72px;
   height: 72px;
 }
-.service-value .box ul li:nth-of-type(1) em {
+.service-value .box > ul li:nth-of-type(1) em {
   background-position: -228px 0;
 }
-.service-value .box ul li:nth-of-type(2) em {
+.service-value .box > ul li:nth-of-type(2) em {
   background-position: -154px 0;
 }
-.service-value .box ul li:nth-of-type(3) em {
+.service-value .box > ul li:nth-of-type(3) em {
   background-position: -302px 0;
 }
-.service-value .box ul li:nth-of-type(4) em {
+.service-value .box > ul li:nth-of-type(4) em {
   background-position: -80px 0;
 }
-.service-value .box ul li label {
+.service-value .box > ul li label {
   display: block;
   text-align: center;
   font-size: 24px;
   color: #d33331;
   padding-bottom: 20px;
 }
-.service-value .box ul li p {
+.service-value .box > ul li p {
   font-size: 14px;
   line-height: 1.6;
 }
-.service-value .box ul li:last-of-type {
+.service-value .box > ul li:last-of-type {
   margin-right: 0;
 }
 .service-value .box2 {
