--- a/src/css/respond-hack.css
+++ b/src/css/respond-hack.css
@@ -2,6 +2,9 @@
 /* for 414 px width screen  iphone6+ */
 @media screen and (min-width:320px) and (max-width:480px) {
     /*PUBLIC*/
+    #header {
+    }
+
     #header #logo {
         padding-top:5px;
         padding-left:0;
@@ -10,19 +13,35 @@
 
     #main-footer {
         padding:25px 0;
+        overflow:visible;
     }
 
     #main-footer .btm-contact > ul {
         display:flex;
         flex-wrap:nowrap;
         flex-direction:row;
-        justify-items:center;
+        justify-content:space-around;
         align-items:center;
     }
 
-    #main-footer .btm-contact li {
-        margin:0 0 15px 0;
+    #main-footer .btm-contact li > a:before {
         transform:scale(0.65);
+        top:-3px;
+        left:5px;
+    }
+
+    #main-footer .btm-contact li > a.icon-wechat:before {
+        left:3px;
+    }
+
+    #main-footer .btm-contact li > a.icon-fb:before {
+        left:0;
+    }
+
+    #main-footer .btm-contact li {
+        display:inline-flex;
+        margin:0 0 15px 0;
+        font-size:12px;
     }
 
     #main-footer .btm-contact li > span.tip {
@@ -32,6 +51,148 @@
     .copyright {
         padding:15px 60px 0 60px;
         font-size:12px;
+    }
+
+    /*响应菜单*/
+    #header .response-menu, #header .nav-toggle {
+        display:block;
+    }
+
+    .nav-open .response-menu {
+        -webkit-transform:translateY(0) scale(1);
+        transform:translateY(0) scale(1);
+        opacity:1;
+        display:block;
+        z-index:99999;
+    }
+
+    .nav-open .nav-toggle {
+        box-shadow:none;
+    }
+
+    .nav-open .nav-toggle:before {
+        width:1600px;
+        height:1600px;
+        background-color:rgba(255, 255, 255, 0.90);
+    }
+
+    .nav-open .nav-toggle .icon {
+        width:0;
+    }
+
+    .nav-open .nav-toggle .icon:before {
+        -webkit-transform:translateY(9px) rotate(45deg);
+        -ms-transform:translateY(9px) rotate(45deg);
+        transform:translateY(9px) rotate(45deg);
+    }
+
+    .nav-open .nav-toggle .icon:after {
+        -webkit-transform:translateY(-9px) rotate(-45deg);
+        -ms-transform:translateY(-9px) rotate(-45deg);
+        transform:translateY(-9px) rotate(-45deg);
+    }
+
+    .nav-toggle {
+        width:55px;
+        height:55px;
+        right:0;
+        border-radius:50%;
+        position:absolute;
+        z-index:9999;
+        cursor:pointer;
+        -webkit-transition-duration:0.66s;
+        transition-duration:0.66s;
+        transiting-timing-function:swing;
+    }
+
+    .nav-toggle:before {
+        width:60px;
+        height:60px;
+        border-radius:50%;
+        background-color:rgba(255, 255, 255, 0.90);
+        content:"";
+        position:absolute;
+        top:50%;
+        left:50%;
+        zoom:1;
+        -webkit-transform:translateX(-50%) translateY(-50%);
+        -ms-transform:translateX(-50%) translateY(-50%);
+        transform:translateX(-50%) translateY(-50%);
+        -webkit-transition-duration:0.66s;
+        transition-duration:0.66s;
+    }
+
+    .nav-toggle .icon {
+        width:25px;
+        height:2px;
+        background-color:#d33331;
+        border-radius:2px;
+        position:absolute;
+        top:28px;
+        left:15px;
+        -webkit-transition-duration:0.5s;
+        transition-duration:0.5s;
+        transiting-timing-function:swing;
+    }
+
+    .nav-toggle .icon:before,
+    .nav-toggle .icon:after {
+        width:25px;
+        height:2px;
+        background-color:#d33331;
+        border-radius:2px;
+        content:"";
+        position:absolute;
+        left:0;
+        -webkit-transition-duration:0.5s;
+        transition-duration:0.5s;
+    }
+
+    .nav-toggle .icon:before {
+        top:-9px;
+    }
+
+    .nav-toggle .icon:after {
+        top:9px;
+    }
+
+    .response-menu {
+        position:absolute;
+        top:80px;
+        left:0;
+        width:100%;
+        height:100%;
+        z-index:-1;
+        -webkit-transition-duration:0.66s;
+        transition-duration:0.66s;
+        transiting-timing-function:swing;
+        -webkit-transform:translateY(100%) scale(0);
+        transform:translateY(100%) scale(0);
+        opacity:0;
+    }
+
+    .response-menu ul li {
+        width:50%;
+        float:left;
+    }
+
+    .response-menu ul li a {
+        display:block;
+        padding:10px 0;
+        text-align:center;
+        color:#222;
+        text-decoration:none;
+        font-size:16px;
+        -webkit-transition-duration:0.25s;
+        transition-duration:0.25s;
+    }
+
+    .response-menu ul:hover li a {
+        opacity:0.5;
+    }
+
+    .response-menu ul:hover li:hover a {
+        opacity:1;
     }
 
     /*首页*/
@@ -49,12 +210,12 @@
         position:absolute;
         width:563px !important;
         height:inherit;
-        margin-left:-80px;
+        margin-left:-85px;
     }
 
     .centered-btns_tabs {
-        width:24%;
-        margin-left:-12%;
+        width:30%;
+        margin-left:-15%;
         bottom:0;
     }
 
@@ -105,15 +266,16 @@
         width:50%;
     }
 
-    #service .service-list li .box > span:first-child {
+    #service .service-list li > span:first-child {
         transform:scale(0.85);
+        margin-bottom:-10px;
     }
 
-    #service .service-list li .box > p {
+    #service .service-list li > p {
         font-size:12px;
     }
 
-    #service .service-list li .box > strong {
+    #service .service-list li > strong {
         padding:5px 0;
     }
 
@@ -132,6 +294,8 @@
     #news .tab-content .last-news,
     #news .tab-content li {
         float:none;
+        margin:auto;
+        width:100%;
     }
 
     #news .tab-content ul.item4,
@@ -144,6 +308,26 @@
         width:100%;
     }
 
+    #news .tab-content ul.item6 .viewImg {
+        width:25%;
+        margin:0;
+    }
+
+    #news .tab-content ul > li > a {
+        padding:0 15px;
+        display:block;
+    }
+
+    #news .tab-content .last-news .viewImg > .date,
+    #news .tab-content li .viewImg > .date {
+        margin:auto;
+    }
+
+    #news .tab-content ul.item6 .box {
+        width:75%;
+        float:l;
+    }
+
     #news .tab-control ul,
     #main-footer .btm-contact {
         padding:0;
@@ -153,9 +337,18 @@
         margin:0 15px;
     }
 
-    #client #logos .box > li,
+    #client #logos .box > li {
+        width:50%;
+        padding:20px 0;
+        background:#fff;
+    }
+
+    #client #logos .box > li:nth-of-type(6) ~ li {
+        display:none;
+    }
+
     #client #logos .box > li img {
-        height:34px;
+        height:auto;
     }
 
     #client {
@@ -198,16 +391,43 @@
     }
 
     #service-intro > figure:first-of-type p,
+    #service-intro > img.earth {
+        max-width:80%;
+        margin:30px auto;
+    }
+
+    .service-apply-type {
+        background-color:#f8f8f8;
+        padding:30px 0;
+    }
+
+    .service-apply-type > .lt-box {
+        display:block;
+        width:100%;
+    }
+
+    .service-apply-type > .lt-box .box {
+        position:relative;
+        text-align:center;
+        width:100%;
+        left:0;
+        top:0;
+        right:0
+    }
+
+    .service-apply-type > .lt-box .box > p {
+        padding:0 15px;
+    }
+
+    .service-apply-type > .rt-box {
+        display:none;
+    }
+
     .service-ads > p {
         box-sizing:border-box;
         margin-top:5px;
         padding:5px 15px;
         font-size:14px;
-    }
-
-    #service-intro > img.earth {
-        max-width:80%;
-        margin:30px auto;
     }
 
     .service-ads {
@@ -228,7 +448,7 @@
         margin-top:15px;
         font-size:12px;
         height:auto;
-        box-shadow:inset 0 0 1px rgba(0, 0, 0, .4);
+        border:1px solid #d7d7d7;
     }
 
     .service-ads .box > figure {
@@ -237,7 +457,7 @@
         box-sizing:border-box;
         float:left;
         padding:10px;
-        box-shadow:inset 0 0 1px rgba(0, 0, 0, .4);
+        border:1px solid #d7d7d7;
     }
 
     .service-ads .box2 .advantage {
@@ -247,9 +467,6 @@
     }
 
     .service-ads .box2 .advantage em {
-        font-size:42px;
-        height:50px;
-        top:0;
         display:none;
     }
 
@@ -262,14 +479,45 @@
         width:100%;
         height:90px;
         padding:5px 15px;
-        margin-bottom:5px;
+        margin-bottom:1px;
     }
 
     .service-ads .box2 .advantage label {
         float:left;
         font-size:14px;
-        width:90px;
+        color:#d33331;
+        width:30%;
         height:80px;
+        display:block;
+        line-height:80px;
+        word-wrap:break-word;
+        word-break:break-all;
+    }
+
+    .service-ads .box2 .advantage p {
+        float:left;
+        width:70%;
+        padding:15px 0;
+    }
+
+    .service-ads .box2 .significance {
+        padding:50px 15px 20px 15px;
+        display:flex;
+        width:100%;
+        box-sizing:border-box;
+        flex-direction:row;
+        flex-wrap:wrap;
+        justify-content:space-between;
+        align-content:space-between;
+    }
+
+    .service-ads .box2 .significance li,
+    .service-ads .box2 .significance li:not(:last-of-type) {
+        margin:0 0 30px;
+        height:160px;
+        float:none;
+        padding-top:20px;
+        width:48%;
     }
 
     .service-brand-value {
@@ -313,24 +561,39 @@
         margin-top:15px;
         font-size:14px;
     }
-    .service-brand-value .list dl dd{
+
+    .service-brand-value .list dl dd {
         font-size:12px;
     }
+
     .service-flow {
         display:none;
     }
-    .service-value{
+
+    .service-value {
         height:auto;
     }
+
+    .service-value .box {
+        padding:30px 0;
+    }
+
+    .service-value.bg1 {
+        background:transparent;
+        height:auto;
+        overflow:hidden;
+    }
+
     .service-value header {
         height:80px;
         font-size:32px;
         line-height:80px;
     }
 
-    .service-value .pd-v50{
+    .service-value .pd-v50 {
         padding:15px 0;
     }
+
     .service-value .box2 ul {
         display:none;
     }
@@ -345,21 +608,35 @@
         top:0;
     }
 
-
-    .service-value .box2 figure:first-child>h3{
+    .service-value .box2 figure:first-child > h3 {
         margin-bottom:5px;
         font-size:16px;
     }
-    .service-value .box2 figure:first-child>p{
+
+    .service-value .box2 figure:first-child > p {
         font-size:12px;
     }
 
-
-    .service-value .replace{
+    .service-value .replace {
         display:block !important;
         height:auto;
         padding:15px 0 30px 15px;
         overflow:hidden;
+    }
+
+    .service-value .box > h3,
+    .service-value .box > p {
+        display:none
+    }
+
+    .service-value .box > ul {
+        margin-top:0;
+    }
+
+    .service-value .box > ul li {
+        width:100%;
+        height:auto;
+        box-shadow:none;
     }
 
     /*新闻*/
@@ -456,6 +733,52 @@
         padding-bottom:30px
     }
 
+    #newsDetail {
+        padding:50px 15px;
+        box-sizing:border-box;
+    }
+
+    #newsDetail > p {
+        font-size:14px;
+    }
+
+    #newsDetail > .imgBox {
+        box-sizing:border-box;
+        width:100%;
+    }
+
+    #newsDetail > .imgBox img {
+        width:75%;
+    }
+
+    .news-control .lt,
+    .news-control .rt {
+        display:block;
+        width:100%;
+    }
+
+    .news-control .lt > span {
+        height:auto;
+        padding:0 15px;
+        text-overflow:ellipsis;
+        overflow:hidden;
+        white-space:nowrap;
+        font-size:12px;
+    }
+
+    .news-control .rt {
+        text-align:center;
+        margin-top:15px;
+    }
+
+    .news-control .rt a {
+        text-align:right;
+    }
+
+    #shareBar {
+        display:none;
+    }
+
     /*加入我们*/
     #tabMenu {
         padding:15px 0;
@@ -482,12 +805,19 @@
         font-size:12px
     }
 
+    .tab-content tr > td:nth-of-type(1) {
+        width:50%;
+    }
 
     .tab-content tr > td > label:first-child,
     .tab-content tr > td:nth-of-type(3),
     .tab-content tr > td:nth-of-type(4) {
-
         display:none;
+    }
+
+    .tab-content .preview {
+        padding:0;
+        border:none;
     }
 
     #jobDetail {
@@ -496,6 +826,7 @@
         display:block;
         box-sizing:border-box;
         margin-left:10%;
+        margin-top:-200px;
         padding:0 10px;
         left:0;
     }
@@ -529,8 +860,8 @@
     }
 
     .aboutUs-content .title > figcaption:first-child > h3 + span {
-        display:block;
-        width:238px;
+        display:flex;
+        justify-content:center;
         margin:5px auto 0 auto;
         height:auto;
         overflow:hidden;
@@ -538,14 +869,16 @@
 
     .aboutUs-content .title > figcaption:first-child > h3 + span sup {
         display:inline-block;
-        padding:1px 5px;
+        padding:1px;
+        width:5px;
         float:left;
+        text-indent:-99999px;
+        font-size:0;
         margin:0;
     }
 
     .aboutUs-content strong.tip {
         margin:0;
-        float:left;
     }
 
     .aboutUs-content .title ~ p {
@@ -569,6 +902,11 @@
 
     .columns-2 {
         padding:20px 0;
+    }
+
+    .columns-2 > .container > .fl .title,
+    .columns-2 > .container > .fr .title {
+        margin-top:30px;
     }
 
     .columns-2 .imgBox > img:only-child {
@@ -605,10 +943,20 @@
     .description-text .box > .text p {
         padding:30px 15px 0 0;
     }
+    .ourCulture-table{
+        padding-bottom:30px;
+    }
+    .ourCulture-table > img:only-of-type {
+        display:block;
+    }
+
+    .ourCulture-table > table:only-of-type {
+        display:none
+    }
 
     /*傻鸟知服*/
     #foolishBird-wrap {
-        height:532px;
+        height:422px;
     }
 
     #foolishBird-wrap .box {
@@ -621,15 +969,19 @@
 
     #foolishBird-wrap .box > header:first-child:after {
         transform:scale(0.25);
-        right:30px;
+        right:20px;
         top:-15px;
     }
 
     #foolishBird-wrap .box > header:first-child strong {
         display:block;
-        font-size:16px;
         line-height:1.2;
         text-align:center;
+        font-size:20px;
+    }
+
+    #foolishBird-wrap .box > header:first-child strong > br {
+        display:none;
     }
 
     #foolishBird-wrap .box > header:first-child + p {
@@ -692,4 +1044,76 @@
         font-size:12px;
         margin-top:15px;
     }
+
+    /*联系我们*/
+    .map-wrap {
+        overflow:visible;
+    }
+
+    .map-wrap .map {
+        background:transparent;
+        padding:0;
+    }
+
+    .map-wrap .map .map-tags,
+    .province {
+        display:none;
+    }
+
+    .map-info {
+        position:relative;
+        height:auto;
+        margin:auto;
+        width:90%;
+    }
+
+    .map-info > .box {
+        width:100%;
+        box-sizing:border-box;
+    }
+
+    .map-info > .box .content-side > span {
+        top:-60px;
+    }
+
+    .map-info > .box .content-side > span.next,
+    .map-info > .box .content-side > span.prev {
+        background:#d33331;
+        color:#fff;
+        text-indent:0;
+        width:100px;
+        height:30px;
+        line-height:30px;
+    }
+
+    #welcome-text-wrap {
+        padding:30px 0 70px 0;
+    }
+
+    #welcome-text-wrap > .text,
+    #welcome-text-wrap > .qrcode {
+        display:block;
+        text-align:center;
+    }
+
+    #welcome-text-wrap > .lt > h3 {
+        display:none;
+    }
+
+    #welcome-text-wrap > .lt > h3 + label {
+        font-size:42px;
+        margin-top:0;
+    }
+
+    #welcome-text-wrap > .lt > h3 + label + p {
+        padding:0 15px;
+    }
+
+    #welcome-text-wrap > .rt {
+        margin:auto;
+        width:auto;
+    }
 }
+
+
+
