--- a/src/less/lib-public.less
+++ b/src/less/lib-public.less
@@ -26,6 +26,7 @@
     .fr;
     .pos-r;
     .text-center;
+    z-index:99;
     .list-inline(left, 0);
     height:100px;
     line-height:100px;
@@ -108,6 +109,13 @@
       }
     }
   }
+
+
+//  响应菜单
+  .response-menu,
+  .nav-toggle{
+    display:none;
+  }
 }
 
 // Footer
@@ -185,6 +193,9 @@
         &.icon-wechat:hover:before {
           background:url("@{icon-1}") no-repeat -311px -178px;
         }
+        &.icon-cs:hover:before {
+          background:url("@{icon-1}") no-repeat -260px -230px;
+        }
       }
       & > span {
         .pos-a;
@@ -245,6 +256,7 @@
       width:50px;
       height:50px;
       //图标
+      &.icon-cs:before,
       &.icon-qq:before,
       &.icon-tel:before {
         .before(26px, 26px);
