--- a/src/less/pages/contactUs.less
+++ b/src/less/pages/contactUs.less
@@ -34,7 +34,7 @@
     width:130px;
     img:only-of-type {
       display:block;
-      .m-auto(0,0)
+      .m-auto(0, 0)
     }
   }
 }
@@ -57,6 +57,17 @@
     }
 
   }
+}
+.province span:after,
+.map-tags li:not(.city):after {
+  .pos-a;
+  content:'';
+  left:0;
+  bottom:-6px;
+  width:0;
+  height:0;
+  border-top:6px solid #d5d4d4;
+  border-right:6px solid transparent;
 }
 
 .province span,
@@ -167,17 +178,6 @@
   }
 }
 
-.province span:after,
-.map-tags li:not(.city):after {
-  .pos-a;
-  content:'';
-  left:0;
-  bottom:-6px;
-  width:0;
-  height:0;
-  border-top:6px solid #d5d4d4;
-  border-right:6px solid transparent;
-}
 
 //省份
 .province {
@@ -246,7 +246,7 @@
       &:nth-of-type(2) {
         margin-top:20px;
       }
-      &+ul>li{
+      & + ul > li {
         line-height:1.8;
       }
     }
@@ -277,6 +277,7 @@
         height:30px;
         cursor:pointer;
         z-index:99;
+        text-indent:-999999px;
         &.prev {
           left:-30px;
           background:url("@{icon-7}") no-repeat 0 -549px;
