--- a/src/less/pages/servicePro.less
+++ b/src/less/pages/servicePro.less
@@ -1,17 +1,9 @@
 @import "../lib-common";
 
-//BANNER
-.banner{
-  .pos-r;
-  img {
-    max-width:100%
-  }
-}
-
 //当前服务项目
 #service-current {
-  &.wrap{
-    padding: 50px 0 80px 0;
+  &.wrap {
+    padding:50px 0 80px 0;
   }
   .pb(50px);
   & > .title figcaption h3 {
@@ -83,24 +75,42 @@
 }
 
 //专利申请类型
-.service-patent-type {
-  width:100%;
-  height:550px;
-  .mt(100px);
-  background:url("@{bground}/servicePatentBg.png") no-repeat right center #f8f8f8;
-  background-size:contain;
-  .box {
-    width:45%;
-    padding:90px 0;
-    line-height:1.8;
-    h3 {
-      font-size:30px;
-      .mb(20px);
+.service-apply-type {
+  background-color:#f8f8f8;
+  .toTable;
+  .lt-box {
+    .pos-r;
+    width:40%;
+    vertical-align:top;
+    display:table-cell;
+    .box {
+      width:70%;
+      position:absolute;
+      right:-90px;
+      top:70px;
+      & > h3 {
+        font-size:30px;
+        .mb(20px);
+      }
+      & > p {
+        .f14;
+        .pr(40px);
+        .mb(15px);
+      }
     }
-    &>p{
-      .f14;
-      .pr(40px);
-      .mb(15px);
+  }
+  .rt-box {
+    .pos-r;
+    width:60%;
+    vertical-align:top;
+    display:table-cell;
+    & > img {
+      height:inherit;
+      &.cover {
+        .pos-a;
+        left:30%;
+        top:40px;
+      }
     }
   }
 }
@@ -200,13 +210,13 @@
   .box {
     overflow:visible;
     .pt(70px);
-    h3 {
+    & > h3 {
       .mb(20px)
     }
     & > p {
       .text-center;
     }
-    ul {
+    & >ul {
       .h-auto;
       .mt(70px);
       .list-inline(left, 30px);
@@ -262,7 +272,7 @@
       height:auto;
       top:130px;
       right:120px;
-      &>h3{
+      & > h3 {
         .mb(20px);
       }
     }
@@ -412,7 +422,7 @@
     }
     //  意义
     .significance {
-      .wrapper(100px,100px);
+      .wrapper(100px, 100px);
       li {
         .border-base(#d7d7d7);
         padding:40px 10px;
