--- a/less/pages/servicePro.less
+++ b/less/pages/servicePro.less
@@ -68,10 +68,13 @@
       width:70%
     }
   }
-  & > img.earth {
+  .earth {
     .block;
-    .m-auto(80px, 100px);
-  }
+      & >img {
+      .block;
+      .m-auto(80px, 100px);
+    }
+  } 
 }
 
 //专利申请类型
