--- a/css/pages/servicePro.css
+++ b/css/pages/servicePro.css
@@ -549,7 +549,10 @@ p {
 #service-intro > figure:first-of-type p {
   width: 70%;
 }
-#service-intro > img.earth {
+#service-intro .earth {
+  display: block;
+}
+#service-intro .earth > img {
   display: block;
   margin: 80px auto 100px auto;
 }
