--- a/less/pages/contactUs.less
+++ b/less/pages/contactUs.less
@@ -127,20 +127,28 @@
   }
   /*江苏省*/
   &#nanjing {
-    top:251px;
+    top:203px;
     left:625px
   }
 
   &#suzhou {
-    top:275px;
+    top:227px;
     left:625px
   }
 
   &#wuxi {
-    top:299px;
+    top:251px;
+    left:625px
+  }
+  &#changzhou {
+    top:275px;
     left:625px
   }
 
+  &#nantong {
+    top:299px;
+    left:625px
+  }
   /*浙江省*/
   &#wenzhou {
     top:361px;
@@ -170,6 +178,11 @@
   &#jiaxing {
     top:481px;
     left:645px
+  }
+   //福建省
+  &#xiamen {
+    top:453px;
+    left:575px;
   }
 
   //广东省
@@ -234,8 +247,8 @@
       top:300px;
       &:before {
         right:-65px;
-        top:-50px;
-        height:72px;
+        top:-98px;
+        height:120px;
         z-index:-1;
       }
     }
@@ -248,6 +261,18 @@
         right:-65px;
         top:0;
         height:144px;
+        z-index:-1;
+      }
+    }
+
+ //广东
+    &#fujian {
+      left:560px;
+      top:420px;
+      &:before {
+        left:15px;
+        top:30px;
+        height:24px;
         z-index:-1;
       }
     }
