--- a/less/style.css
+++ b/less/style.css
@@ -240,7 +240,7 @@ body {
   background: url("../img/icon-1.png") no-repeat -288px -230px;
 }
 .icon-backtop:before {
-  background: url("../img/icon-1.png") no-repeat -233px -230px;
+  background: url("../img/icon-1.png") no-repeat -231px -230px;
 }
 .icon-Q:before {
   background: url("../img/icon-1.png") no-repeat -174px -152px;
@@ -628,7 +628,8 @@ p {
   display: none;
 }
 #header + section,
-#header + main {
+#header + main,
+#header + article {
   padding-top: 100px;
 }
 #main-footer {
@@ -1825,7 +1826,10 @@ p {
 #service-intro > figure:first-of-type p {
   width: 70%;
 }
-#service-intro > img.earth {
+#service-intro .earth {
+  display: block;
+}
+#service-intro .earth > img {
   display: block;
   margin: 80px auto 100px auto;
 }
@@ -2595,6 +2599,7 @@ p {
 }
 .aboutUs-content .title ~ p {
   padding-bottom: 15px;
+  text-indent: 2em;
 }
 .aboutUs-content .title ~ .list-text {
   font-family: "STSongti-SC-Light", "宋体", "微软雅黑", sans-serif;
@@ -3683,16 +3688,26 @@ p {
 }
 .province span#nanjing,
 .map-tags li#nanjing {
-  top: 251px;
+  top: 203px;
   left: 625px;
 }
 .province span#suzhou,
 .map-tags li#suzhou {
-  top: 275px;
+  top: 227px;
   left: 625px;
 }
 .province span#wuxi,
 .map-tags li#wuxi {
+  top: 251px;
+  left: 625px;
+}
+.province span#changzhou,
+.map-tags li#changzhou {
+  top: 275px;
+  left: 625px;
+}
+.province span#nantong,
+.map-tags li#nantong {
   top: 299px;
   left: 625px;
 }
@@ -3725,6 +3740,11 @@ p {
 .map-tags li#jiaxing {
   top: 481px;
   left: 645px;
+}
+.province span#xiamen,
+.map-tags li#xiamen {
+  top: 453px;
+  left: 575px;
 }
 .province span#guangzhou,
 .map-tags li#guangzhou {
@@ -3781,8 +3801,8 @@ p {
 }
 .province > span#jiangsu:before {
   right: -65px;
-  top: -50px;
-  height: 72px;
+  top: -98px;
+  height: 120px;
   z-index: -1;
 }
 .province > span#zhejiang {
@@ -3793,6 +3813,16 @@ p {
   right: -65px;
   top: 0;
   height: 144px;
+  z-index: -1;
+}
+.province > span#fujian {
+  left: 560px;
+  top: 420px;
+}
+.province > span#fujian:before {
+  left: 15px;
+  top: 30px;
+  height: 24px;
   z-index: -1;
 }
 .province > span#guangdong {
